# contactbook-app-challenge-Copia

./: .gitignore  README.es.md  README.md  pyproject.toml
assets/diagrams/: contactbook-model.drawio
contactbook/: app.py
contactbook/model/: contacts.py
contactbook/view/: ui_console.py
tests/: test_contactbook.py
